# whisper

./: .gitignore  pyproject.toml
.devcontainer/: devcontainer.json  first-run-notice.txt
