[project]
name = "whisper"
version = "20230314"
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "black[jupyter]",
    "isort",
    "jupyter",
    "tensorflow",
    "pandas",
    "torchaudio",
    "jiwer",
    "setuptools-rust",
]

[tool.black]

[tool.isort]
profile = "black"
include_trailing_comma = true
line_length = 88
multi_line_output = 3
